--- a/code/spring-boot-own/src/main/resources/templates/thymeleaf/index.html
+++ b/code/spring-boot-own/src/main/resources/templates/thymeleaf/index.html
@@ -5,6 +5,6 @@
     <title>后台管理系统首页</title>
 </head>
 <body>
-    <a href="/thymeleaf/toLogin">去登录>>></a>
+    <a href="/thymeleaf/login">去登录>>></a>
 </body>
 </html>
