--- a/code/ibed/src/main/resources/templates/login/login.html
+++ b/code/ibed/src/main/resources/templates/login/login.html
@@ -6,12 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
 
     <!-- 引入样式 -->
-    <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
+    <!--<link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">-->
+    <link rel="stylesheet" th:href="@{/webjars/element-ui/css/index.css}">
     <link rel="stylesheet" th:href="@{/css/login/login.css}"/>
 
     <!-- 引入组件库 -->
-    <script src="https://unpkg.com/element-ui/lib/index.js"></script>
     <script type="text/javascript" th:src="@{/webjars/vue/vue.js}"></script>
+    <!--<script src="https://unpkg.com/element-ui/lib/index.js"></script>-->
+    <script type="text/javascript" th:src="@{/webjars/element-ui/js/index.js}"></script>
     <script type="text/javascript" th:src="@{/webjars/jquery/jquery-3.3.1.js}"></script>
 
     <title>登录页面</title>
@@ -21,13 +23,20 @@
     <div class="login-main">
         <div class="login-title">登录</div>
         <div class="login-input">
-            <input class="login-input-1" type="text" v-model="user.username" placeholder="请输入账号"/>
+            <el-input v-model="user.username" placeholder="请输入账号" clearable></el-input>
+            <!--<input class="login-input-1" type="text" v-model="user.username" placeholder="请输入账号"/>-->
         </div>
         <div class="login-input">
-            <input class="login-input-1" type="password" v-model="user.password" placeholder="请输入密码"/>
+            <el-input v-model="user.password" placeholder="请输入账号" show-password></el-input>
+            <!--<input class="login-input-1" type="password" v-model="user.password" placeholder="请输入密码"/>-->
         </div>
-        <button class="login-button" @click="check">立即登录</button>
+        <el-button type="primary" icon="el-icon-search">搜索</el-button>
+        <!--<button class="login-button" @click="check">立即登录</button>-->
     </div>
+    <el-button @click="visible = true">Button</el-button>
+    <el-dialog :visible.sync="visible" title="Hello World">
+        <p>Try Element</p>
+    </el-dialog>
 </div>
 </body>
 <script type="text/javascript" th:src="@{/js/login/login.js}"></script>
