--- a/code/ibed/src/main/resources/templates/login/login.html
+++ b/code/ibed/src/main/resources/templates/login/login.html
@@ -19,20 +19,28 @@
     <title>登录页面</title>
 </head>
 <body>
-<div id="app" class="login-box">
-    <div class="login-main">
-        <div class="login-title">登录</div>
-        <div class="login-input">
-            <el-input v-model="user.username" placeholder="请输入账号" clearable></el-input>
-            <!--<input class="login-input-1" type="text" v-model="user.username" placeholder="请输入账号"/>-->
-        </div>
-        <div class="login-input">
-            <el-input v-model="user.password" placeholder="请输入账号" show-password></el-input>
-            <!--<input class="login-input-1" type="password" v-model="user.password" placeholder="请输入密码"/>-->
-        </div>
-        <el-button type="primary" icon="el-icon-search">搜索</el-button>
-        <!--<button class="login-button" @click="check">立即登录</button>-->
-    </div>
+<div id="loginApp" class="login-box">
+    <div class="login-title">登录页面</div>
+    <el-form ref="userForm" :model="user" :rules="userRules">
+        <el-form-item prop="username">
+            <el-input
+                    v-model="user.username"
+                    prefix-icon="el-icon-user"
+                    placeholder="请输入账号"
+                    clearable></el-input>
+        </el-form-item>
+        <el-form-item prop="password">
+            <el-input
+                    v-model="user.password"
+                    prefix-icon="el-icon-lock"
+                    placeholder="请输入密码"
+                    show-password></el-input>
+        </el-form-item>
+        <el-form-item>
+            <el-button type="primary" @click="submitForm('userForm')">登录</el-button>
+            <el-button @click="resetForm('userForm')">清空</el-button>
+        </el-form-item>
+    </el-form>
     <el-button @click="visible = true">Button</el-button>
     <el-dialog :visible.sync="visible" title="Hello World">
         <p>Try Element</p>
