--- a/code/ibed/src/main/resources/static/css/login/login.css
+++ b/code/ibed/src/main/resources/static/css/login/login.css
@@ -14,18 +14,9 @@
     font-family: 微软雅黑, serif;
     font-size: 25px;
     line-height: 60px;
+    text-align: center;
+    margin-bottom: 40px;
 }
 .login-input {
     line-height: 60px;
-}
-.login-input-1 {
-    height: 25px;
-    width: 250px;
-}
-.login-button {
-    height: 25px;
-    width: 255px;
-    margin-top: 20px;
-    background-color: #0092ee;
-    color: #fff;
 }
