--- a/code/ibed/src/main/resources/templates/home/home.html
+++ b/code/ibed/src/main/resources/templates/home/home.html
@@ -18,8 +18,14 @@
 </head>
 <body>
 <div id="homeApp">
+    <el-button icon="el-icon-back" @click="backTrack">返回上一页</el-button>
     <el-table :data="responseData" style="width: 100%;">
-        <el-table-column label="目录"></el-table-column>
+        <el-table-column prop="objectName" label="目录"></el-table-column>
+        <el-table-column fixed="right" label="操作" width="200">
+            <template slot-scope="scope">
+                <el-button @click="lookOver(scope.row)">查看</el-button>
+            </template>
+        </el-table-column>
     </el-table>
 </div>
 </body>
