--- a/code/ibed/src/main/resources/templates/index.html
+++ b/code/ibed/src/main/resources/templates/index.html
@@ -28,10 +28,16 @@
         <span class="pull-right">
             <span>
                 <a @click="login">登录</a>
+                |
                 <router-link to="">注册</router-link>
             </span>
+            |
             <span>
                 <a @click="">注销</a>
+            </span>
+            |
+            <span>
+                <a @click="ibed">图床</a>
             </span>
         </span>
     </div>
